--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <div id="hero">
             <img 
-                src="./images/nasa logo.png" 
+                src="./images/background.png" 
                 alt="Main logo of NASA"
                 id="main-logo"
             />
@@ -15,4 +15,5 @@
         </div>
         <h3>Terms and Conditions apply.</h3>
     </body>
+
 </html>
