--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <div id="hero">
             <img 
-                src="./images/background.png" 
+                src="./images/background.jpg" 
                 alt="Main logo of NASA"
                 id="main-logo"
             />
@@ -17,3 +17,4 @@
     </body>
 
 </html>
+
